--- a/Aboutus.html
+++ b/Aboutus.html
@@ -430,7 +430,7 @@
       <div class="relative z-10 flex flex-col items-center justify-center h-[450px] text-center text-white px-4">
         <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-2">About Us</h1>
         <div class="text-sm sm:text-base md:text-lg">
-          <a href="./Home.html" class="font-semibold hover:text-[#a5a5a5]">Home</a>
+          <a href="./index.html" class="font-semibold hover:text-[#a5a5a5]">Home</a>
           <span class="mx-2 text-[#a5a5a5]">/</span>
           <span class="text-[#a5a5a5]">About Us</span>
         </div>
